<resources>
    <string name="app_name">EasyTouch</string>
    <string name="menu_tel">Tel</string>
    <string name="menu_message">SMS</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_screenshot">Screenshot</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_wifi">WIFI</string>
    <string name="menu_search">Browser</string>
    <string name="menu_light">Light</string>
    <string name="menu_home">Home</string>
    <string name="menu_boost">Boost</string>
    <string name="menu_commend">Commend</string>
    <string-array name="commonly_used_apps">
        <item>@string/qq_package</item>
        <item>@string/wechat_package</item>
        <item>@string/netEase_music_package</item>
        <item>@string/bilibili_package</item>
        <item>@string/weibo_package</item>
        <item>@string/zhihu_package</item>
        <item>@string/baiduMap_package</item>
        <item>@string/easytouch_package</item>
    </string-array>
    <string name="qq_package">com.tencent.mobileqq</string>
    <string name="wechat_package">com.tencent.mm</string>
    <string name="netEase_music_package">com.netease.cloudmusic</string>
    <string name="bilibili_package">tv.danmaku.bili</string>
    <string name="weibo_package">com.sina.weibo</string>
    <string name="zhihu_package">com.zhihu.android</string>
    <string name="baiduMap_package">com.baidu.BaiduMap</string>
    <string name="easytouch_package">com.assistivetool.booster.easytouch</string>
    <string name="setting_openFloatingWindow">Open FloatingWindow</string>
    <string name="setting_openScreenshot">Open ScreenShot</string>
    <string name="btn_setting">Settings</string>
    <string name="msg_request_openFloatWindow">Please open the floating window first!</string>
    <string name="dialog_request_open_floatwindow_pemission_content">Please open the display pop-up window permission to make EastyTouch work properly!</string>
    <string name="dialog_request_open_floatwindow_permission_title">EasyTouch</string>
    <string name="dialog_first_start_app_titile">EasyTouch</string>
    <string name="dialog_first_start_app_content">For better functionality, please give EasyTouch BOOT permission!</string>
    <string name="msg_open">open</string>
    <string name="msg_close">close</string>
    <string name="msg_open_screenshot_fail">the screenshot function failed!Please try again!</string>
    <string name="msg_not_support_flashlight">Your smart phone does not support the flash function！</string>
    <string name="msg_flashlight_open">Note!You can not turn on the camera while using flashlight!Turn off the flashlight before attempting to turn on camera!</string>
    <string name="msg_without_camera_permission">Do not give the camera permission,please open the camera permission and then try this feature!</string>
    <string name="msg_without_write_file_permission">Do not give the read-and-write-file permission,please open the read-and-write-file permission and then try this feature!</string>
    <string name="msg_version_too_old">The version of your smartphone is too low to use the screenshot function!</string>
    <string name="msg_unsupport_blt">Your smart phone does not support Bluetooth devices!</string>
    <string name="msg_reOpen_screenshot">Please re-open the screenshot function!</string>
    <string name="msg_without_root_screenshot">You do not have the ROOT!Please open the ROOT and try screenshot function again!</string>
    <string name="msg_screenshot_success">Screenshot sucess!Picture saved in </string>
    <string name="msg_screen_fail">Screenshot fail！</string>
    <string name="msg_screenshot_fail">Screenshot failed! Please check whether the file permissions are turned on!</string>
    <string name="msg_memory_cleared">Boost done! The system is clean!</string>
    <string name="msg_memory_clear_with_number">Boost done! Has cleaned memory</string>
    <string name="toast_after_goto_float_window_permission">Please find EasyTouch in the Management interface and open the "display pop-up window" permission!</string>
    <string name="toast_after_goto_startup_permission">Please find EasyTouch in the Management interface and open the "allow boot" permission!</string>
    <string name="brand_xiaomi">Xiaomi</string>
    <string name="brand_nexus">google</string>
    <string name="hint_open_accessibility">1.Click \"Accessibility\" \n2.Please find and active \" %1$s \"</string>
    <string name="msg_accessibility_description">Tap the switch at the top-right corner.\nAfter tapping，the system will send a notice warning you about your personal information.
        Please be assured that EasyTouch will not collect any personal information.</string>
    <string name="text_IKnow">I Know</string>
    <string name="hint_open_float_window">1.Find and enter \"EasyTouch\". \n2.Find and active \"Permit drawing over other apps\"</string>
    <string name="menu_easytouch_enable">开启EasyTouch</string>
    <string name="menu_init_setting">初始设置</string>
    <string name="menu_theme">主题</string>
    <string name="menu_notification_setting">通知设置</string>
    <string name="menu_gesture">悬浮按钮手势</string>
    <string name="menu_display_setting">显示设置</string>
    <string name="menu_advanced_setting">高级设置</string>
    <string name="menu_rate_us">五星好评</string>
    <string name="menu_share">分享</string>
    <string name="menu_help">帮助</string>
    <string name="menu_enable_boot">允许开机自动启动</string>
    <string name="menu_enable_boot_sub">避免重启后还需要手动启动</string>
    <string name="menu_gesture_click">单击</string>
    <string name="menu_gesture_double_click">双击</string>
    <string name="menu_gesture_long_click">长按</string>
    <string name="menu_gesture_three_click">三击</string>
    <string name="msg_activate_notification">Find EasyTouch and activate.</string>
    <string name="INSTALL">install</string>
    <string name="NEXT">next</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>